Replaced old Rox-Cog path with new

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
-[submodule "Rox-cogs"]
-	path = Rox-cogs
-	url = https://gitlab.com/Roxedus/Rox-cogs.git
-	branch = master
 [submodule "tannhjul-custom-commands"]
 	path = tannhjul-custom-commands
 	url = git@github.com:r-Norge/tannhjul-custom-commands.git
+[submodule "tannhjul-ComicsNo"]
+	path = tannhjul-ComicsNo
+	url = git@github.com:r-Norge/tannhjul-ComicsNo.git
